--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ PRE LOADER
 }
 
 
-   .header_area{min-height:600px;background:url(../img/harco8.jpg)no-repeat scroll center center;background-size:cover;}
+   .header_area{min-height:600px;background:url(../img/fimyco.jpg)no-repeat scroll center center;background-size:cover;}
    .main_header
    {
 	   text-align:center;
